# mosiac

./: .gitignore  YouGov_Jan2026_v2.xlsx  census_data.py  config.py  main.py  model.py  mrp_model.py  nomis_api.py  oac_data.py  pyproject.toml  raking.py  requirements.txt  survey_data.py  yougov_parser.py
data/: diagnostics.json  london_aggregate.csv  london_constituency_results.csv  london_constituency_summary.csv  national_joint_distribution.csv  predicted_cell_votes.csv  yougov_age_vote_shares.csv  yougov_nssec_vote_shares.csv  yougov_tenure_vote_shares.csv
