[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mosiac"
version = "0.1.0"
description = "London voting intention model using Census demographics and MRP"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "ipfn>=1.4",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.scripts]
mosiac = "main:main"
